--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,12 @@
       }
     ],
     "paths": {
-      "@api/*": ["./src/*"]
+      "@api/*": ["./src/api/*"],
+      "@stores/*": ["./src/stores/*"],
+      "@components/*": ["./src/components/*"],
+      "@config/*": ["./src/config/*"],
+      "@functions/*": ["./src/functions/*"],
+      "@contexts/*": ["./src/contexts/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
