--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "framer-motion": "^11.2.12",
     "next": "14.2.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sass": "^1.80.3"
   },
   "devDependencies": {
     "@svgr/webpack": "6.2.1",
